# ML-Crash-Course-Softserve

./: README.md  pyproject.toml
notebooks/: AI_Intro_Task_v2.ipynb
notebooks/ai ethics/theory/: AI_Ethics.ipynb
notebooks/ai intro/task/: AI_Intro_Task_v2.ipynb
notebooks/ai intro/theory/: AI_Intro.ipynb
notebooks/data collection and scraping/theory/: Data_Collection_and_Scraping.ipynb
notebooks/data preprocessing and visualization/theory/: Data_Preprocessing.ipynb
notebooks/deep  learning/theory/: Deep_Learning.ipynb
notebooks/final project/: notebook.ipynb
notebooks/machine learning/theory/: Classification.ipynb  Regression.ipynb  Unsupervised_Learning.ipynb
notebooks/nlp/theory/: NLP.ipynb
notebooks/optimization/task/: Optimization_Tasks.ipynb
notebooks/optimization/theory/: Optimization_in_AI.ipynb
notebooks/search algorithms/task/: Search_Tasks_L1.ipynb
notebooks/search algorithms/theory/: Search_Algorithms_in_AI_part_1.ipynb  Search_Algorithms_in_AI_part_2.ipynb
notebooks/unsupervised learning/theory/: Unsupervised_Learning.ipynb
