[project]
name = "ml-crash-course-softserve"
version = "0.1.0"
description = "ML Crash Course - Softserve: theory and task notebooks covering AI intro, search algorithms, optimization, data collection/scraping, data preprocessing/visualization, machine learning, deep learning, NLP, AI ethics and a final project."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }

# Runtime dependencies actually imported across the notebooks in ./notebooks
dependencies = [
    # --- core scientific stack ---
    "numpy>=1.24,<2.0",            # pinned <2.0: required by scikit-learn-extra and tensorflow==2.15
    "pandas>=2.0,<3.0",
    "scipy>=1.11,<2.0",

    # --- plotting / visualization ---
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<0.14",
    "plotly>=5.22,<7.0",
    "bokeh>=3.4,<4.0",
    "wordcloud>=1.9,<2.0",

    # --- classic machine learning ---
    "scikit-learn>=1.3,<1.5",      # kept <1.5 for numpy<2 / scikit-learn-extra compatibility
    "scikit-learn-extra==0.3.0",   # KMedoids / CLARA - only ships wheels up to cp311, hence Python 3.11 pin
    "networkx>=3.0,<4.0",
    "pydot>=2.0,<5.0",             # used by networkx.drawing.nx_pydot (also needs system Graphviz, see README)

    # --- optimization / search ---
    "pulp>=2.7,<3.4",

    # --- deep learning ---
    "tensorflow>=2.15,<2.16",      # last TF line before the NumPy 2.0 migration (TF 2.16+)
    "torch>=2.2,<2.7",

    # --- NLP ---
    "nltk>=3.8,<4.0",
    "gensim>=4.3,<5.0",
    "transformers>=4.40,<5.0",
    "sacremoses>=0.1,<0.2",        # required by MarianMTModel/MarianTokenizer
    "autocorrect>=2.6,<3.0",

    # --- data collection / scraping ---
    "requests>=2.31,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.0,<7.0",
    "pillow>=10.0,<13.0",

    # --- notebook runtime ---
    "jupyterlab>=4.0,<5.0",
    "notebook>=7.0,<8.0",
    "ipykernel>=6.29,<7.0",
    "ipywidgets>=8.1,<9.0",
]

[project.optional-dependencies]
# 'search algorithms' theory notebooks pull a small helper package straight from GitHub.
# Kept optional so the main install doesn't require git/network access to a third-party repo.
search-algorithms = [
    "cooltest @ git+https://github.com/mehalyna/cooltest.git",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# This repo is a collection of notebooks, not an importable Python package,
# so no packages are collected/shipped when building.
[tool.setuptools]
packages = []

[tool.uv]
package = false
